// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortableTable renders changelog table correctly 1`] = `
<div>
  <div
    class="results-count secondary-font"
  >
    x-results
  </div>
  <table
    class="table changelog-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-summary-column table-cell-content"
        >
          summary
        </th>
        <th
          class="lfr-component-column"
        >
          component
        </th>
        <th
          class="lfr-release-column"
        >
          release
           
          <svg
            aria-label="Sort"
            class="arrow-down asc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-down"
            />
          </svg>
        </th>
        <th
          class="lfr-key-column"
        >
          key
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="LPD-90100GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          <button
            class="btn btn-md btn-link"
            type="button"
          >
            IE11 Web Image Resizing Does not Maintain Initial Aspect Ratio
          </button>
        </td>
        <td
          class="lfr-component-column"
        >
          Frontend Infrastructure &gt; WYSIWYG
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            LPD-90100
          </a>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="LPD-85155GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          <button
            class="btn btn-md btn-link"
            type="button"
          >
            Add menu - Heading order invalid
          </button>
        </td>
        <td
          class="lfr-component-column"
        >
          Accessibility
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            LPD-85155
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SortableTable renders highlights table correctly 1`] = `
<div>
  <div
    class="results-count secondary-font"
  >
    x-results
  </div>
  <table
    class="table highlights-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-released-column"
        >
          date
           
          <svg
            aria-label="Sort"
            class="arrow-up desc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-details-column"
        >
          release
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="118267960"
      >
        <td
          class="lfr-released-column"
        >
          Mar 6, 2019
        </td>
        <td
          class="lfr-details-column"
        >
          <div
            class="details test-filter"
          >
            Content Text
          </div>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="118267952"
      >
        <td
          class="lfr-released-column"
        >
          Mar 1, 2019
        </td>
        <td
          class="lfr-details-column"
        >
          <div
            class="details test-filter"
          >
            Content 2 Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SortableTable renders in reverse order when sorting indicator is clicked 1`] = `
<div>
  <div
    class="results-count secondary-font"
  >
    x-results
  </div>
  <table
    class="table highlights-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-released-column"
        >
          date
           
          <svg
            aria-label="Sort"
            class="arrow-up asc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-details-column"
        >
          release
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="118267952"
      >
        <td
          class="lfr-released-column"
        >
          Mar 1, 2019
        </td>
        <td
          class="lfr-details-column"
        >
          <div
            class="details test-filter"
          >
            Content 2 Text
          </div>
        </td>
      </tr>
      <tr
        class="journal-article-row"
        id="118267960"
      >
        <td
          class="lfr-released-column"
        >
          Mar 6, 2019
        </td>
        <td
          class="lfr-details-column"
        >
          <div
            class="details test-filter"
          >
            Content Text
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`SortableTable renders no results message 1`] = `
<div>
  <div
    class="results-count secondary-font"
  >
    x-results
  </div>
  <table
    class="table highlights-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-released-column"
        >
          date
           
          <svg
            aria-label="Sort"
            class="arrow-up desc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-up"
            />
          </svg>
        </th>
        <th
          class="lfr-details-column"
        >
          release
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="no-results"
  >
    no-results-found-to-match-your-selection
    <h5
      class="secondary-text-color"
    >
      try-modifying-your-criteria
    </h5>
  </div>
</div>
`;

exports[`SortableTable renders the singular x-result language key when there is only one result 1`] = `
<div>
  <div
    class="results-count secondary-font"
  >
    x-result
  </div>
  <table
    class="table changelog-table table-autofit table-list"
    role="table"
  >
    <thead>
      <tr>
        <th
          class="lfr-summary-column table-cell-content"
        >
          summary
        </th>
        <th
          class="lfr-component-column"
        >
          component
        </th>
        <th
          class="lfr-release-column"
        >
          release
           
          <svg
            aria-label="Sort"
            class="arrow-down asc lexicon-icon sorting-indicator"
            role="button"
          >
            <use
              xlink:href="#arrow-down"
            />
          </svg>
        </th>
        <th
          class="lfr-key-column"
        >
          key
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="journal-article-row"
        id="LPD-85155GA"
      >
        <td
          class="lfr-summary-column table-cell-content"
        >
          <button
            class="btn btn-md btn-link"
            type="button"
          >
            Add menu - Heading order invalid
          </button>
        </td>
        <td
          class="lfr-component-column"
        >
          Accessibility
        </td>
        <td
          class="lfr-release-column"
        >
          GA
        </td>
        <td
          class="lfr-key-column"
        >
          <a
            href="/"
          >
            LPD-85155
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
